update github link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a
                                     class="resume-link" href="mailto:#">harshalgaydhankar@gmail.com</a></li>
                             <li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link"
-                                                                                             href="#">https://github.com/harshalgaydhankar</a>
+                                                                                             href="https://github.com/harshalgaydhankar">https://github.com/harshalgaydhankar</a>
                             </li>
                             <li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Pune, India</li>
                         </ul>
