--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <p align="justify">Analyzing user needs and designs software for client use. Develop
                                         code and designs software applications based on user specifications. Modifies
                                         existing software to correct errors or improve performance.Ensured and followed
-                                        best practices like code pairing, TDD, CI/CD, clean code. </p>
+                                        best practices like pair programming, TDD, CI/CD, clean code. </p>
                                     <ul class="resume-list" align="justify">
                                         <li>Midas : It is a risk control system which is used for pre-trade checks and
                                             enhances user experience.
@@ -134,7 +134,7 @@
                                 <div class="item-content">
                                     <p align="justify">Responsible for implementing high availability and alerting
                                         systems, Played the role of Anchor of Team.Responsible for quality product
-                                        implementation using TDD. Followed best practices like code pairing, TDD,
+                                        implementation using TDD. Followed best practices like pair programming, TDD,
                                         CI/CD.</p>
                                     <ul class="resume-list" align="justify">
                                         <li>ARS Global Services : Allstate ARS has an Integration team who handles Web
@@ -264,7 +264,7 @@
                         <section class="education-section py-3">
                             <h3 class="text-uppercase resume-section-heading mb-4">Courses</h3>
                             <ul class="list-unstyled resume-interests-list mb-0">
-                                <li class="mb-2">XP by Galvanize</li>
+                                <li class="mb-2">Xtream Programming by Galvanize</li>
                                 <li class="mb-2">Kotlin for Java Developers</li>
                             </ul>
                         </section><!--//education-section-->
@@ -272,8 +272,9 @@
                         <section class="skills-section py-3">
                             <h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
                             <ul class="list-unstyled resume-lang-list">
+                                <li class="mb-2">English <span class="text-muted">(Professional)</span></li>
                                 <li class="mb-2">Marathi <span class="text-muted">(Native)</span></li>
-                                <li>English <span class="text-muted">(Professional)</span></li>
+                                <li>Hindi <span class="text-muted">(National)</span></li>
                             </ul>
                         </section><!--//certificates-section-->
                         <section class="skills-section py-3">
